--- a/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutHome.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutHome.cshtml
@@ -12,11 +12,17 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="visa, australia" />
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-	@Scripts.Render("~/mainScript")
+	
     @Scripts.Render("~/bundles/jquery")   
     @Styles.Render("~/content/publicPagesCss")
+    
+    @Scripts.Render("~/multipleSelectJS")
+    @Scripts.Render("~/bootstrapjs")
+    @Scripts.Render("~/bootstrapWizarJS")
+
+     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/publicPagesJs")    
-    @Scripts.Render("~/bundles/modernizr")
+   @Scripts.Render("~/mainScript")
     
     @RenderSection("styles", required: false)
 
@@ -65,8 +71,8 @@
 					<li><a href="#seccionWhy" class="scroll">@Html.Raw(@Resource.txt_whyVisaRoomUpperCase)</a></li>
 					<li><a href="#seccionRegister" class="scroll">@Html.Raw(@Resource.txt_RegisterUpperCase)</a></li>
 					<li><a href="http://visaroom.com.au/VisaBlog/">@Html.Raw(@Resource.txt_BlogUpperCase)</a></li>
-					<li>@Html.ActionLink(@Resource.txt_ContactUpperCase, "Contact", "Home")</li>
-                    <li>@Html.ActionLink("DashBoard", "Applicant", "DashBoard")</li>
+					@*<li>@Html.ActionLink(@Resource.txt_ContactUpperCase, "Contact", "Home")</li>*@
+                    <li>@Html.ActionLink("DashBoard", "Applicant", "DASHBOARD")</li>
                     <li>@Html.ActionLink(@Resource.txt_LoginUpperCase, "Login", "Account")</li>
 				</ul>
 				<script>
@@ -115,7 +121,7 @@
 					    <li><a href="#seccionWhy" class="scroll">@Html.Raw(@Resource.txt_whyVisaRoomUpperCase)</a></li>
 					    <li><a href="#seccionRegister" class="scroll">@Html.Raw(@Resource.txt_RegisterUpperCase)</a></li>
 					    <li><a href="http://visaroom.com.au/VisaBlog/">@Html.Raw(@Resource.txt_BlogUpperCase)</a></li>
-					    <li>@Html.ActionLink(@Resource.txt_ContactUpperCase, "Contact", "Home")</li>
+					    @*<li>@Html.ActionLink(@Resource.txt_ContactUpperCase, "Contact", "Home")</li>*@
                         <li>@Html.ActionLink(@Resource.txt_LoginUpperCase, "Login", "Account")</li>
 					</ul>
 				</div>
