--- a/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutLogin.cshtml
+++ b/VisaRoom/VisaRoom.Web/Views/Shared/_LayoutLogin.cshtml
@@ -13,6 +13,7 @@
         @Scripts.Render("~/bootstrapjs")
         @Scripts.Render("~/bundles/modernizr")      
         @Scripts.Render("~/publicPagesJs")
+        @Scripts.Render("~/mainScript")
         @RenderSection("styles", required: false)
 
     </head>
